  (Alain Frisch)
- GPR#263: improve code generation for if-equivalents of (&&) and (||)
  (Pierre Chambart)
- GPR#271: Fix incorrect mutability flag when records are built using "with"
  (Mark Shinwell)
- GPR#270: Make [transl_exception_constructor] generate [Immutable] blocks
  (Mark Shinwell)
- GPR#275: native-code generator for IBM z System running Linux.
  In memoriam Gene Amdahl, 1922-2015. 
  (Bill O'Farrell, Tristan Amini, Xavier Leroy)
- GPR#282: relax short-paths safety check in presence of module aliases, take
  penalty into account while building the printing map.
  (Thomas Refis, Leo White)

Runtime system:
- PR#3612: allow allocating custom block with finalizers in the minor heap
  (Pierre Chambart)
- PR#6517: use ISO C99 types {,u}int{32,64}_t in preference to our homegrown
  types {,u}int{32,64}.
  (Xavier Leroy)
- PR#6760: closures evaluated in the toplevel can now be marshalled
  (whitequark, review by Jacques-Henri Jourdan)
- PR#6902, GPR#210: runtime emits a warning when finalizing an I/O channel
  which is still open (Alain Frisch, review by Damien Doligez)
- Signal handling: for read-and-clear, use GCC/Clang atomic builtins
  if available.  (Xavier Leroy)
- PR#6910, GPR#224: marshaling (output_value, input_value, et al)
  now support marshaled data bigger than 4 Gb.  (Xavier Leroy)
- GPR#226: select higher levels of optimization for GCC and Clang when
  compiling the run-time system and C stub code.  (Xavier Leroy)
- GPR#262: Multiple GC roots per compilation unit (Pierre Chambart, Mark
  Shinwell, review by Damien Doligez)

Standard library:
- PR#6017, PR#7034, GPR#267: More efficient ifprintf implementation
  (Jeremy Yallop, review by Gabriel Scherer)
- PR#6316: Scanf.scanf failure on %u formats when reading big integers
  (Xavier Leroy, Benoît Vaugon)
- PR#6390, GPR#36: expose Sys.{int_size,max_wosize} for improved js_of_ocaml
  portability (Hugo Heuzard)
* PR#6494: Add equal function in modules